# fruits-api-gitops

./: .envrc  .gitignore  404.html  Earthfile  Makefile  README.md  ansible.cfg  argocd.yml  clusters.yml  extras.yml  gitea.yml  gitops.yml  gloo.yml  index.html  mkdocs.yml  pipelines.yml  playbook.yml  pom.xml  pyproject.toml  requirements.txt  requirements.yml  sitemap.xml  toberm.yaml  vars.yml
charts/fruits-api/: Chart.yaml  values.yaml
clean-up/: index.html
deploy/: index.html
docs/: clean-up.md  deploy.md  env-setup.md  index.md  tools-and-sources.md
env-setup/: index.html
helm_vars/fruits-api/: values.yaml
helm_vars/fruits_api/: values.yaml
includes/: env.md  tools.md
manifests/app/: app.yaml  kustomization.yaml
manifests/dbadminer/: deployment.yaml  kustomization.yaml  service.yaml
manifests/pipelines/: kustomization.yaml  pipelines.yaml  triggers.yaml
manifests/portal-rbac/: dev-environment.yaml  dev1-password-secret.yaml  group-devs.yaml  kustomization.yaml  portal.yaml  user-dev1.yaml
pipelines/: cluster-role-binding.yaml  cluster-role.yaml  event-listener-upstream.yaml  fruits-api-pipeline.yaml  git-source-pvc.yaml  gitea-trigger-bindings.yaml  gitea-webhook-listener.yaml  github-credentials.yaml  kustomization.yaml  m2-cache.yaml  pom-version-task.yaml  quayio-credentials.yaml  sa.yaml  settings-nexus2.xml  settings.xml  trigger-template.yaml
search/: search_index.json
tools-and-sources/: index.html
triggers/: fruits-api-trigger-template.yaml  gitea-trigger-bindings.yaml  gitea-webhook-listener.yaml  kustomization.yaml
(+35 files in other folders)
