[tool.poetry]
name = "fruits-api-gitops"
version = "0.1.0"
description = ""
authors = ["Kamesh Sampath <kamesh.sampath@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.0.4"
ansible = "^5.0.1"
kubernetes = "^20.13.0"
jmespath = "^0.10.0"
jsonpatch = "^1.32"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
